--- a/style.css
+++ b/style.css
@@ -2,7 +2,52 @@ body {
     margin: 0;
     padding: 0;
 }
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    background-color: #072019;
+}
+.navbar h2{
+    color:#f18930;
+    padding: 0px 20px;
+    font-size: 25px;
+    font-weight: 500;
+}
+.navbar h2:hover{
+    color:#0b910b;
+    background: #072019;
 
+}
+.navmenu  {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    z-index: 1000;
+    
+}
+.navmenu li a{
+    color: #ffffff;
+    margin-right: 20px;
+    padding: 0px 10px;
+    font-size: 18px;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+
+}
+.navmenu li a:hover{
+    color : red;
+    background: #072019;
+    
+}
+.navmenu li {
+    display: inline-block;
+
+}
 .background-container {
     position: relative;
     height: 400px;
@@ -44,6 +89,7 @@ body {
     color: #fff;
     border: none;
     cursor: pointer;
+    
 }
 .search-container {
     display: flex;
@@ -52,8 +98,11 @@ body {
     height: 20vh;
     background-color: #f0f0f0;
 }
-
+.search-container p{
+    padding-left: 100px;
+}
 .search-box {
+    
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
